test: criar testes unitários para EvaluationService e testes de integração para EvaluationController
- Criados testes unitários para a lógica de consulta e cálculo da média de avaliações em EvaluationService.
- Criados testes de integração para garantir o funcionamento correto dos endpoints do EvaluationController.
- Garantido que os endpoints interagem corretamente com o serviço e o repositório.

Testes cobrindo a funcionalidade e integração dos componentes foram implementados com sucesso.